--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
   "include": ["src"],
   "paths": {
     "@components/*": ["components/*"],
-    "@sections/*": ["sections/*"]
+    "@sections/*": ["sections/*"],
+    "@firebaseApp/*": ["firebaseApp/*"]
   }
 }
