--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "baseUrl": "./src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -17,10 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "paths": {
-    "@components/*": ["components/*"],
-    "@sections/*": ["sections/*"],
-    "@firebaseApp/*": ["firebaseApp/*"]
-  }
+  "include": ["src"]
 }
