--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
