--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.1",
+    "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
