--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,8 @@
     "paths": {
       "@components/*": ["./components/*"],
       "@sections/*": ["./components/sections/*"],
-      "@firebaseApp": ["./firebaseApp"]
+      "@firebaseApp": ["./firebaseApp"],
+      "@mapleAssets": ["./mapleAssets/*"]
     }
   }
 }
