feat: Hero, Info, Invitation 반응형 SCSS

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,8 @@
       "@components/*": ["./components/*"],
       "@sections/*": ["./components/sections/*"],
       "@firebaseApp": ["./firebaseApp"],
-      "@mapleAssets": ["./mapleAssets/*"]
+      "@mapleAssets": ["./mapleAssets/*"],
+      "@hooks/*": ["./hooks/*"]
     }
   }
 }
