--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-scripts": "5.0.1",
     "sass": "^1.77.2",
     "swiper": "^11.1.4",
