feat: 이미지 최적화

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
       "@sections/*": ["./components/sections/*"],
       "@firebaseApp": ["./firebaseApp"],
       "@mapleAssets": ["./mapleAssets/*"],
-      "@hooks/*": ["./hooks/*"]
+      "@hooks/*": ["./hooks/*"],
+      "@utils/*": ["./utils/*"]
     }
   }
 }
